# autobuilder-seereason

./: Backups.hs  CabalTarget.hs  Config.hs  FAILURES  FAQ  README  Setup.hs  Targets.hs  autobuilder-seereason.cabal  autobuilder.hs  build  common  debian  debian-etch  debian-sarge  debian-sid  ghc610  local  relax  seereason-darcs-backups.cabal  ubuntu  ubuntu-gutsy  ubuntu-hardy  ubuntu-intrepid  ubuntu-jaunty
Debian/AutoBuilder/: Details.hs
Debian/AutoBuilder/Details/: Artful.hs  Atoms.hs  CabalInfo.hs  Common.hs  CommonTargets.hs  Distros.hs  GHC.hs  Private.hs  Public.hs  Public.hs.hide  Sources.hs  Targets.hs  Trusty.hs  Unused.hs  Versions.hs  Xenial.hs
Notes/: NewRelease
Targets/: Common.hs  Failing.hs  Hackage.hs  Private.hs  Public.hs  SeeReason.hs  Sid.hs
Tools/: AutoBuilder.hs  Backups.hs
attic/: Dependents.hs  README  debian  debian-lenny  debian-sid  ghc610  local  relax  sources  ubuntu  ubuntu-feisty  ubuntu-hardy  ubuntu-intrepid
debian/: Debianize.hs  changelog
patches/: EdisonAPI.diff  FTGL.diff  GLFW-b-demo.diff  GLFW-b.diff  GenI.diff  HJScript.diff  HJavaScript.diff  HaTeX-doc.diff  HaTeX-texty.diff  HaTeX.diff  HaXml.diff  HsOpenSSL.diff  HsSyck.diff  JuicyPixels.diff  ListLike.diff  MonadCatchIO-transformers.diff  PBKDF2.diff  RJson.diff  acid-state-locktag.diff  acid-state.diff  aeson-native.diff  aeson.diff  alex.diff  amazonka-core.diff  appraisalscribe-acid.diff  async.diff  attoparsec-iso8601.diff  attoparsec-text.diff  attoparsec.diff  bitmap-opengl.diff  bitset.diff  bitset78.diff  blaze-builder-enumerator.diff  blaze-html.diff  blaze-markup.diff  blaze-textual-native.diff  cabal-ghcjs.diff  cabal-install-18.diff  cabal-install-2.diff  cabal-install-22.diff  (+275 more)
