Name:             autobuilder-seereason
Version:          1.4
License:          AllRightsReserved
Copyright:        (c) 2010-2011, SeeReason Partners LLC
Author:           SeeReason Partners <partners@seereason.com>
Maintainer:       SeeReason Partners <partners@seereason.com>
Synopsis:         The autobuilder executable configured for the seereason repository
Description:      The autobuilder executable configured for the seereason repository.  Includes a backup
                  script for our source repositories, Install on a machine other than src.seereason.com
		  to perform automated timed incremental backups.
Build-Type:       Custom
Category:         Web, Language
Cabal-version:    >= 1.13

flag pretty112
  Description: Is Text.PrettyPrint.HughesPJClass available?
  Default: True

flag showplease
  Description: Use the showplease version of Show
  Default: True
  Manual: True

flag local-autobuilder
  Description: Link directly to the source of the autobuilder library
  Default: False
  Manual: True

flag local-debian-repo
  Description: Link directly to the source of the debian-repo library
  Default: False
  Manual: True

flag local-cabal-debian
  Description: Link directly to the source of the cabal-debian library
  Default: False
  Manual: True

flag local-debian
  Description: Link directly to the source of the debian library
  Default: False
  Manual: True

flag local-filemanip-extra
  Description: Link directly to the source of the filemanip-extra library
  Default: False
  Manual: True

flag local-unixutils
  Description: Link directly to the source of the Unixutils library
  Default: False
  Manual: True

flag local-process-extras
  Description: Link directly to the source of the process-extras library (and several others)
  Default: False
  Manual: True

Library
  Default-Language: Haskell2010
  Hs-Source-Dirs: .
  Build-Depends:
    base >= 4,
    bytestring,
    Cabal,
    containers,
    fgl,
    filepath,
    file-embed,
    lens,
    mtl,
    process,
    text,
    unix
  Exposed-Modules:
    Debian.AutoBuilder.Details
    Debian.AutoBuilder.Details.Versions
    Debian.AutoBuilder.Details.Targets
    Debian.AutoBuilder.Details.Private
    Debian.AutoBuilder.Details.Public
    Debian.AutoBuilder.Details.Sources
    Debian.AutoBuilder.Details.Common

  if flag(showplease)
    Hs-Source-Dirs: ../showplease
    Build-Depends: parsec
    Exposed-Modules: Debug.Show

  Build-Depends: AutoBuilder >= 6.71
  Build-Depends: debian-repo >= 5.73
  Build-Depends: cabal-debian >= 4.24.5
  Build-Depends: debian >= 3.89
  Build-Depends: process-extras >= 0.2.0
  Build-Depends: filemanip-extra
  Build-Depends: Unixutils

Executable autobuilder-seereason
  Default-Language: Haskell2010
  Hs-Source-Dirs: Tools
  Main-Is: AutoBuilder.hs
  GHC-Options: -threaded -Wall -Wwarn -O2
  Build-Depends:
    autobuilder-seereason,
    base >= 4,
    bytestring,
    Cabal,
    containers,
    file-embed,
    filepath,
    process,
    text
  Build-Depends: AutoBuilder
  Build-Depends: debian-repo >= 5.73
  Build-Depends: cabal-debian
  Build-Depends: debian
  Build-Depends: process-extras >= 0.2.0

Executable seereason-darcs-backups
  Default-Language: Haskell2010
  Hs-Source-Dirs: Tools
  Main-Is: Backups.hs
  GHC-Options: -threaded -Wall -Wwarn -O2
  Build-depends: base, sr-extra, network-uri
  Build-Depends: archive >= 1.7
