Name:             autobuilder-seereason
Version:          1.4
License:          AllRightsReserved
Copyright:        (c) 2010-2011, SeeReason Partners LLC
Author:           SeeReason Partners <partners@seereason.com>
Maintainer:       SeeReason Partners <partners@seereason.com>
Synopsis:         The autobuilder executable configured for the seereason repository
Description:      The autobuilder executable configured for the seereason repository.  Includes a backup
                  script for our source repositories, Install on a machine other than src.seereason.com
		  to perform automated timed incremental backups.
Build-Type:       Custom
Category:         Web, Language
Cabal-version:    >= 1.13

flag pretty112
  Description: Is Text.PrettyPrint.HughesPJClass available?
  Default: True

flag showplease
  Description: Use the showplease version of Show
  Default: False
  Manual: True

Library
  Default-Language: Haskell2010
  Hs-Source-Dirs: .
  Build-Depends:
    AutoBuilder >= 6.71,
    base >= 4,
    bytestring,
    Cabal,
    cabal-debian >= 4.24.5,
    containers,
    debian >= 3.89,
    debian-repo >= 5.73,
    fgl,
    filepath,
    file-embed,
    lens,
    mtl,
    process,
    text,
    unix,
    process-extras >= 0.2.0,
    filemanip-extra,
    Unixutils
  Exposed-Modules:
    Debian.AutoBuilder.Details
    Debian.AutoBuilder.Details.Versions
    Debian.AutoBuilder.Details.Targets
    Debian.AutoBuilder.Details.Private
    Debian.AutoBuilder.Details.Public
    Debian.AutoBuilder.Details.Sources
    Debian.AutoBuilder.Details.Common

  if flag(showplease)
    Hs-Source-Dirs: ../showplease
    Build-Depends: parsec
    Exposed-Modules: Debug.Show

Executable autobuilder-seereason
  Default-Language: Haskell2010
  Hs-Source-Dirs: Tools
  Main-Is: AutoBuilder.hs
  GHC-Options: -threaded -Wall -Wwarn -O2
  Build-Depends:
    AutoBuilder,
    autobuilder-seereason,
    base >= 4,
    bytestring,
    Cabal,
    containers,
    debian,
    debian-repo,
    file-embed,
    filepath,
    process,
    text
  Build-Depends: process-extras >= 0.2.0

Executable seereason-darcs-backups
  Buildable: False
  Default-Language: Haskell2010
  Hs-Source-Dirs: Tools
  Main-Is: Backups.hs
  GHC-Options: -threaded -Wall -Wwarn -O2
  Build-depends: base, sr-extra, network-uri
  Build-Depends: archive >= 1.7
