Name:             autobuilder-seereason
Version:          1.4
License:          AllRightsReserved
Copyright:        (c) 2010-2011, SeeReason Partners LLC
Author:           SeeReason Partners <partners@seereason.com>
Maintainer:       SeeReason Partners <partners@seereason.com>
Synopsis:         The autobuilder executable configured for the seereason repository
Description:      The autobuilder executable configured for the seereason repository.  Includes a backup
                  script for our source repositories, Install on a machine other than src.seereason.com
		  to perform automated timed incremental backups.
Build-Type:       Custom
Category:         Web, Language
Cabal-version:    >= 1.13

flag pretty112
  Description: Is Text.PrettyPrint.HughesPJClass available?
  Default: True

flag showplease
  Description: Use the showplease version of Show
  Default: False
  Manual: True

flag local-libs
  Description: Compile local libs
  Default: False
  Manual: True

Library
  Default-Language: Haskell2010
  Hs-Source-Dirs: .
  Build-Depends:
    base >= 4,
    bytestring,
    Cabal,
    cabal-debian >= 4.24.5,
    containers,
    debian >= 3.89,
    fgl,
    filepath,
    file-embed,
    lens,
    mtl,
    process,
    text,
    unix,
    process-extras >= 0.2.0,
    filemanip-extra,
    Unixutils
  Exposed-Modules:
    Debian.AutoBuilder.Details
    Debian.AutoBuilder.Details.Versions
    Debian.AutoBuilder.Details.Targets
    Debian.AutoBuilder.Details.Private
    Debian.AutoBuilder.Details.Public
    Debian.AutoBuilder.Details.Artful
    Debian.AutoBuilder.Details.Sources
    Debian.AutoBuilder.Details.Common

  if flag(local-libs)
    Hs-Source-Dirs: ../autobuilder, ../debian-repo, ../autobuilder/dist/build/autogen
    Build-Depends:
      time, exceptions, pureMD5, SHA, network-uri, pretty, regex-compat, sr-extra,
      applicative-extras, zlib, tar, magic, syb, utf8-string, deepseq, transformers,
      template-haskell, ListLike, old-locale, old-time, directory
    Exposed-Modules:
      Debian.AutoBuilder.BuildEnv,
      Debian.AutoBuilder.BuildTarget,
      Debian.AutoBuilder.BuildTarget.Apt,
      Debian.AutoBuilder.BuildTarget.Bzr,
      Debian.AutoBuilder.BuildTarget.Cd,
      Debian.AutoBuilder.BuildTarget.Darcs,
      Debian.AutoBuilder.BuildTarget.DebDir,
      Debian.AutoBuilder.BuildTarget.Debianize,
      Debian.AutoBuilder.BuildTarget.Git,
      Debian.AutoBuilder.BuildTarget.Hackage,
      Debian.AutoBuilder.BuildTarget.Hg,
      Debian.AutoBuilder.BuildTarget.Patch,
      Debian.AutoBuilder.BuildTarget.Proc,
      Debian.AutoBuilder.BuildTarget.Quilt,
      Debian.AutoBuilder.BuildTarget.SourceDeb,
      Debian.AutoBuilder.BuildTarget.Svn,
      Debian.AutoBuilder.BuildTarget.Tla,
      Debian.AutoBuilder.BuildTarget.Twice,
      Debian.AutoBuilder.BuildTarget.Uri,
      Debian.AutoBuilder.LocalRepo,
      Debian.AutoBuilder.Main,
      Debian.AutoBuilder.Params,
      Debian.AutoBuilder.Prelude,
      Debian.AutoBuilder.Target,
      Debian.AutoBuilder.Types.Buildable
      Debian.AutoBuilder.Types.CacheRec
      Debian.AutoBuilder.Types.DefaultParams
      Debian.AutoBuilder.Types.Download
      Debian.AutoBuilder.Types.Fingerprint
      Debian.AutoBuilder.Types.Packages,
      Debian.AutoBuilder.Types.ParamRec
      Debian.AutoBuilder.Version
      Paths_AutoBuilder

      Debian.Releases,
      Debian.Repo,
      Debian.Repo.AptImage,
      Debian.Repo.Changes,
      Debian.Repo.Dependencies,
      Debian.Repo.EnvPath,
      Debian.Repo.Internal.Apt,
      Debian.Repo.Internal.IO,
      Debian.Repo.Internal.Repos,
      Debian.Repo.Fingerprint,
      Debian.Repo.LocalRepository,
      Debian.Repo.MonadOS,
      Debian.Repo.OSImage,
      Debian.Repo.Package,
      Debian.Repo.PackageID,
      Debian.Repo.PackageIndex,
      Debian.Repo.Prelude,
      Debian.Repo.Prelude.Bool,
      Debian.Repo.Prelude.GPGSign,
      Debian.Repo.Prelude.List,
      Debian.Repo.Prelude.Lock,
      Debian.Repo.Prelude.Misc,
      Debian.Repo.Prelude.Process,
      Debian.Repo.Prelude.SSH,
      Debian.Repo.Prelude.Time,
      Debian.Repo.Prelude.Verbosity,
      Debian.Repo.Release,
      Debian.Repo.RemoteRepository,
      Debian.Repo.Repo,
      Debian.Repo.Rsync,
      Debian.Repo.Slice,
      Debian.Repo.SourceTree,
      Debian.Repo.State.AptImage,
      Debian.Repo.State.OSImage,
      Debian.Repo.State.Package,
      Debian.Repo.State.PackageIndex,
      Debian.Repo.State.Release,
      Debian.Repo.State.Repository,
      Debian.Repo.State.Slice,
      Debian.Repo.Top,
      Debian.VersionPolicy
  else
    Build-Depends:
      AutoBuilder >= 6.71,
      debian-repo >= 5.73

  if flag(showplease)
    Hs-Source-Dirs: ../showplease
    Build-Depends: parsec
    Exposed-Modules: Debug.Show

Executable autobuilder-seereason
  Default-Language: Haskell2010
  Hs-Source-Dirs: Tools
  Main-Is: AutoBuilder.hs
  GHC-Options: -threaded -Wall -Wwarn -O2
  Build-Depends:
    autobuilder-seereason,
    base >= 4,
    bytestring,
    Cabal,
    containers,
    debian,
    file-embed,
    filepath,
    process,
    text
  Build-Depends: process-extras >= 0.2.0
  if !flag(local-libs)
    Build-Depends: AutoBuilder, debian-repo

Executable seereason-darcs-backups
  if flag(local-libs)
    Buildable: False
  Default-Language: Haskell2010
  Hs-Source-Dirs: Tools
  Main-Is: Backups.hs
  GHC-Options: -threaded -Wall -Wwarn -O2
  Build-depends: base, sr-extra, network-uri
  Build-Depends: archive >= 1.7
